// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-3-69"
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Fornecedor
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Local de produção
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Preço médio
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <div
        pathname={undefined}
        text="para ver o contato do fornecedor."
      >
        SignUpLink
      </div>
    </div>
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-3-69"
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Fornecedor
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Local de produção
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Preço médio
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Contato do fornecedor
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
    </div>
  </div>
</div>
`;
